src/test/ui/rfc-2093-infer-outlives/nested-union.stderr
error: rustc_outlives
  --> $DIR/nested-union.rs:5:1
   |
LL | / union Foo<'a, T: Copy> {
LL | |     field1: Bar<'a, T>
LL | | }
   | |_^
   |
   = note: T : 'a

error: aborting due to previous error

